fixed spacing in blogs

--- a/src/components/styles/component-blog.scss
+++ b/src/components/styles/component-blog.scss
@@ -14,7 +14,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   -moz-box-shadow:    inset 0 0 10px #ffffff;
   -webkit-box-shadow: inset 0 0 10px #ffffff;
   box-shadow:         inset 0 0 10px #ffffff;
